# rtic-experiment

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yaml
src/: lib.rs
